--- a/package.json
+++ b/package.json
@@ -18,9 +18,34 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@progress/kendo-angular-grid": "^16.2.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.13.0"
+    "zone.js": "~0.13.0",
+    "@progress/kendo-data-query": "^1.0.0",
+    "@progress/kendo-drawing": "^1.19.0",
+    "@progress/kendo-licensing": "^1.0.2",
+    "@progress/kendo-angular-buttons": "16.2.0",
+    "@progress/kendo-angular-common": "16.2.0",
+    "@progress/kendo-angular-dateinputs": "16.2.0",
+    "@progress/kendo-angular-layout": "16.2.0",
+    "@progress/kendo-angular-dropdowns": "16.2.0",
+    "@progress/kendo-angular-excel-export": "16.2.0",
+    "@progress/kendo-angular-icons": "16.2.0",
+    "@progress/kendo-angular-inputs": "16.2.0",
+    "@progress/kendo-angular-intl": "16.2.0",
+    "@progress/kendo-angular-l10n": "16.2.0",
+    "@progress/kendo-angular-label": "16.2.0",
+    "@progress/kendo-angular-pdf-export": "16.2.0",
+    "@progress/kendo-angular-popup": "16.2.0",
+    "@progress/kendo-angular-utils": "16.2.0",
+    "@progress/kendo-angular-treeview": "16.2.0",
+    "@progress/kendo-angular-navigation": "16.2.0",
+    "@progress/kendo-angular-dialog": "16.2.0",
+    "@progress/kendo-svg-icons": "^3.0.0",
+    "@progress/kendo-angular-progressbar": "16.2.0",
+    "@angular/localize": "^16.2.0",
+    "@progress/kendo-theme-default": "^8.0.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.2.11",
